--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "axios": "^1.6.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "js-cookie": "^3.0.5",
     "next": "14.0.3",
+    "next-auth": "^5.0.0-beta.4",
     "node-fetch": "^3.3.2",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-router-dom": "^6.20.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
