--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "live-shots",
+  "name": "dynamic",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,25 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@supabase/supabase-js": "^2.39.0",
-    "axios": "^1.6.2",
-    "cors": "^2.8.5",
-    "express": "^4.18.2",
-    "js-cookie": "^3.0.5",
-    "next": "14.0.3",
-    "next-auth": "^5.0.0-beta.4",
-    "node-fetch": "^3.3.2",
+    "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
-    "react-router-dom": "^6.20.1"
+    "tailwind-scrollbar-variants": "^2.0.5"
   },
   "devDependencies": {
-    "@types/react": "18.2.47",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
-    "eslint-config-next": "14.0.3",
+    "eslint-config-next": "14.0.4",
     "postcss": "^8",
-    "prettier": "3.1.0",
     "tailwind-scrollbar": "^3.0.5",
     "tailwindcss": "^3.3.0"
   }
