--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "node ./pages/api/server.js",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.6.5",
+    "express": "^4.18.2",
+    "football-data-api": "^0.1.4",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
