--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-select": "^5.8.0",
     "tailwind-scrollbar-hide": "^1.1.7",
     "tailwind-scrollbar-variants": "^2.0.5"
   },
